--- a/Front-end1/index.html
+++ b/Front-end1/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio 1 imply</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>HomePage</h1>
+    <p>Olá, tudo bem?</p>
+    <button>
+        <input type="button" value="Clique aqui" onclick="alert('Olá, tudo bem?')">
+    </button>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="sobre.html">Sobre</a></li>
+            <li><a href="contato.html">Contato</a></li>
+        </ul>
+    </nav>
     
 </body>
 </html>
