--- a/Front-end1/index.html
+++ b/Front-end1/index.html
@@ -5,10 +5,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Validação de E-mail</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="themedark.css">
 </head>
 <body>
+
+
+  <header>
+    <h1>Armazene seus Leads</h1>
+    <nav>
+      <ul>
+        <li><a href="home.html">Início</a></li>
+        <li><a href="sobre.html">Sobre</a></li>
+        <li><a href="">Contato</a></li>
+      </ul>
+    </nav>
+  </header>
+  <aside>
+    <h2>Menu Lateral</h2>
+    <Button id="temadark"> Alterar Tema </Button>
+    <ul>
+      <li><a href="#link1">Link 1</a></li>
+      <li><a href="#link2">Link 2</a></li>
+      <li><a href="#link3">Link 3</a></li>
+    </ul>
+  </aside>
+  
   <main class="content">
-    <button id="openPopupBtn">Validar E-mail</button>
+    <button id="openPopupBtn">Validar Email</button>
     <ul id="emailHistory"></ul>
   </main>
 
@@ -23,6 +46,7 @@
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <script src="email.js"></script>
+  <script src="temadark.js"></script>
 </body>
 </html>
