--- a/Desafio1/index.html
+++ b/Desafio1/index.html
@@ -22,7 +22,7 @@
   </header>
   <aside>
     <h2>Menu Lateral</h2>
-    <Button id="temadark"> Alterar Tema </Button>
+    <Button id="temadark"> 🌓 </Button>
     <ul>
       <li><a href="#link1">Link 1</a></li>
       <li><a href="#link2">Link 2</a></li>
