--- a/Desafio1/index.html
+++ b/Desafio1/index.html
@@ -24,8 +24,8 @@
     <h2>Menu Lateral</h2>
     <Button id="temadark"> 🌓 </Button>
     <ul>
-      <li><a href="#link1">Link 1</a></li>
-      <li><a href="#link2">Link 2</a></li>
+      <li><a href="#link1">Acesse a Dashboard</a></li>
+      <li><a href="#link2">Link2</a></li>
       <li><a href="#link3">Link 3</a></li>
     </ul>
   </aside>
