--- a/Desafio2/index.html
+++ b/Desafio2/index.html
@@ -7,33 +7,50 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Cabeçalho -->
   <header>
-    <div class="logo">LOGO</div>
+    <div class="logo"><img src="" alt=""></div>
     <nav id="menu">
       <ul>
-        <li><a href="#secao1">Seção 1</a></li>
-        <li><a href="#secao2">Seção 2</a></li>
-        <li><a href="#secao3">Seção 3</a></li>
+        <li><a href="#secao1">Voltar a loja</a></li>
+        <li><a href="#secao2"></a></li>
+        <li><a href="#secao3">Suporte</a></li>
       </ul>
     </nav>
     <button id="menu-toggle" aria-label="Abrir menu">&#9776;</button>
-    <button id="darktema" aria-label="Alternar tema">🌓</button>
+    <button id="darktema" aria-label="Alternar tema">Alterar tema</button>
   </header>
 
 
   <main>
     <section id="secao1">
-      <h1>Título da Seção</h1>
-      <p>Conteúdo da seção principal...</p>
+      <h1>Escolha o seu prato</h1>
+      <p>Hambuergers</p>
+      <input type="text" id="search" placeholder="Pesquisar...">
+      <div class="card">
+        <img src="hamburguer.jpg" alt="Hamburguer">
+        <h2>Burger Americano</h2>
+        <p>Descrição do produto</p>
+        <button id="addToCartBtn">Adicionar ao Carrinho</button>
+      </div>
+      <div class="card">
+        <img src="hamburguer.jpg" alt="Hamburguer">
+        <h2>Nome do Produto</h2>
+        <p>Descrição do produto</p>
+        <button id="addToCartBtn">Adicionar ao Carrinho</button>
+      </div>
+      <div class="card">
+        <img src="hamburguer.jpg" alt="Hamburguer">
+        <h2>Nome do Produto</h2>
+        <p>Descrição do produto/p>
+        <button id="addToCartBtn">Adicionar ao Carrinho</button>
     </section>
     <section id="secao2">
-      <h2>Outra Seção</h2>
-      <p>Mais conteúdo da página...</p>
+      <h2>lorem</h2>
+      <p>lorem</p>
     </section>
     <section id="secao3">
       <h2>Seção Final</h2>
-      <p>Última parte da seção central...</p>
+      <p>lorem</p>
     </section>
   </main>
 
