--- a/Desafio2/index.html
+++ b/Desafio2/index.html
@@ -58,6 +58,7 @@
     <p>© 2025 Todos os direitos reservados.</p>
   </footer>
 <script src="script.js"></script>
+<script src="carrinho.js"></script>
   
 </body>
 </html>
