--- a/Desafio2/carrinho.html
+++ b/Desafio2/carrinho.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carrinho do Hamburger</title>
+    <title>Carrinho de Compras</title>
+    <link rel="stylesheet" href="carrinho.css">
 </head>
 <body>
+    <h1>Carrinho de Compras</h1>
     
+    <div id="produtos">
+        <div class="produto">
+            <h2>Produto 1</h2>
+            <p>Preço: R$ 50,00</p>
+            <button onclick="adicionarAoCarrinho('Produto 1', 50)">Adicionar ao Carrinho</button>
+        </div>
+        <div class="produto">
+            <h2>Produto 2</h2>
+            <p>Preço: R$ 30,00</p>
+            <button onclick="adicionarAoCarrinho('Produto 2', 30)">Adicionar ao Carrinho</button>
+        </div>
+        <div class="produto">
+            <h2>Produto 3</h2>
+            <p>Preço: R$ 70,00</p>
+            <button onclick="adicionarAoCarrinho('Produto 3', 70)">Adicionar ao Carrinho</button>
+        </div>
+    </div>
+    
+    <div id="carrinho">
+        <h2>Carrinho de Compras</h2>
+        <ul id="lista-carrinho"></ul>
+        <p>Total: R$ <span id="total">0</span></p>
+        <button onclick="finalizarCompra()">Finalizar Compra</button>
+    </div>
+
+    <script src="carrinho.js"></script>
 </body>
 </html>
